--- a/package.json
+++ b/package.json
@@ -21,6 +21,13 @@
     "webpack-dev-server": "^3.10.3"
   },
   "devDependencies": {
-    "html-webpack-plugin": "^4.3.0"
+    "autoprefixer": "^9.8.0",
+    "css-loader": "^3.5.3",
+    "file-loader": "^6.0.0",
+    "html-webpack-plugin": "^4.3.0",
+    "node-sass": "^4.14.1",
+    "postcss-loader": "^3.0.0",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.2.1"
   }
 }
