--- a/package.json
+++ b/package.json
@@ -15,12 +15,18 @@
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
+    "@fortawesome/fontawesome-free": "^5.13.0",
     "babel-loader": "^8.1.0",
     "bootstrap": "^4.5.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.0.1",
+    "core-js": "^3.6.5",
+    "cursor-dot": "^1.0.5",
+    "gsap": "^3.3.0",
     "jquery": "^3.5.1",
     "popper.js": "^1.14.3",
+    "prettier-webpack-plugin": "^0.2.3",
+    "regenerator-runtime": "^0.13.5",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
@@ -32,6 +38,7 @@
     "html-webpack-plugin": "^4.3.0",
     "node-sass": "^4.14.1",
     "postcss-loader": "^3.0.0",
+    "prettier": "2.0.5",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
     "url-loader": "^4.1.0"
