--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/polyfill": "^7.10.1",
     "@fortawesome/fontawesome-free": "^5.13.0",
+    "@material-ui/core": "^4.10.2",
     "axios": "^0.19.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
