--- a/package.json
+++ b/package.json
@@ -16,22 +16,34 @@
     "@babel/polyfill": "^7.10.1",
     "@fortawesome/fontawesome-free": "^5.13.0",
     "@material-ui/core": "^4.10.2",
+    "@tanem/react-nprogress": "^3.0.31",
+    "animate.css": "^4.1.0",
     "axios": "^0.19.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "blobs": "^2.1.0",
     "bootstrap": "^4.5.0",
     "clean-webpack-plugin": "^3.0.0",
     "cursor-dot": "^1.0.5",
     "express": "^4.17.1",
+    "gooey-react": "^1.0.1",
     "gsap": "^3.3.0",
     "jquery": "^3.5.1",
     "material-ui": "^0.20.2",
     "mysql": "^2.18.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-fullpage-custom-loader": "^0.1.5",
+    "react-loading-overlay": "^1.0.1",
+    "react-native-animatable": "^1.3.3",
+    "react-page-loading": "^1.0.2",
     "react-responsive-masonry": "^2.1.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
+    "react-shape-editor": "^3.5.3",
+    "react-simple-img": "^2.3.9",
+    "react-spinners": "^0.8.3",
+    "react-transition-group": "^4.4.1",
     "webpack-dev-server": "^3.11.0"
   },
   "devDependencies": {
