--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "material-ui": "^0.20.2",
     "mysql": "^2.18.1",
     "react": "^16.13.1",
+    "react-blob": "^2.1.0",
     "react-dom": "^16.13.1",
     "react-fullpage-custom-loader": "^0.1.5",
     "react-loading-overlay": "^1.0.1",
