--- a/package.json
+++ b/package.json
@@ -38,14 +38,20 @@
     "react-loading-overlay": "^1.0.1",
     "react-native-animatable": "^1.3.3",
     "react-page-loading": "^1.0.2",
+    "react-presents": "^0.8.1",
+    "react-responsive-carousel": "^3.2.8",
     "react-responsive-masonry": "^2.1.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-shape-editor": "^3.5.3",
     "react-simple-img": "^2.3.9",
+    "react-slick": "^0.26.1",
     "react-slideshow-image": "^1.5.3",
     "react-spinners": "^0.8.3",
+    "react-spring": "^8.0.27",
     "react-transition-group": "^4.4.1",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^5.4.5",
     "webpack-dev-server": "^3.11.0"
   },
   "devDependencies": {
