--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.17.1",
     "gooey-react": "^1.0.1",
     "gsap": "^3.3.4",
+    "imagehover.css": "^2.0.0",
     "jquery": "^3.5.1",
     "material-ui": "^0.20.2",
     "mysql": "^2.18.1",
