--- a/package.json
+++ b/package.json
@@ -25,13 +25,16 @@
     "bootstrap": "^4.5.0",
     "clean-webpack-plugin": "^3.0.0",
     "cursor-dot": "^1.0.5",
+    "ejs": "^3.1.3",
     "express": "^4.17.1",
     "gooey-react": "^1.0.1",
     "gsap": "^3.3.4",
     "imagehover.css": "^2.0.0",
     "jquery": "^3.5.1",
+    "json-stringify": "^1.0.0",
     "material-ui": "^0.20.2",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.4.10",
     "react": "^16.13.1",
     "react-blob": "^2.1.0",
     "react-dom": "^16.13.1",
